--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,15 +30,32 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    viewBinding {
-        enabled = true
-    }
     buildFeatures {
         viewBinding true
     }
 }
 
 dependencies {
+    def lifecycle_version = "2.5.0-alpha05"
+
+    //Lottie
+    implementation 'com.airbnb.android:lottie:3.2.0'
+
+    //Coroutine
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2")
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
+
+    //Okhttp
+    implementation("com.squareup.okhttp3:logging-interceptor:4.2.0")
+
+    // ViewModel
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
+
+    // LiveData
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
