--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DesaA">
         <activity
+            android:name=".ui.backwood.BackwoodActivity"
+            android:exported="false" />
+        <activity
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
@@ -19,10 +22,16 @@
             android:name=".SplashActivity"
             android:exported="false" />
         <activity
-            android:name=".HomeActivity"
-            android:exported="true"
+            android:name=".ui.user.HomeUserActivity"
+            android:exported="false"
             android:label="@string/title_activity_home"
-            android:theme="@style/Theme.DesaA.NoActionBar">
+            android:theme="@style/Theme.DesaA.NoActionBar"
+             />
+        <activity
+            android:name=".ui.headman.HomeHeadmanActivity"
+            android:theme="@style/Theme.DesaA.NoActionBar"
+            android:label="@string/title_activity_home_headman"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
