--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+//        freeCompilerArgs = ['-Xjvm-default=compatibility']
     }
     buildFeatures {
         viewBinding true
@@ -36,7 +37,7 @@ android {
 }
 
 dependencies {
-    def lifecycle_version = "2.5.0-alpha05"
+    def lifecycle_version = "2.4.1"
 
     //Lottie
     implementation 'com.airbnb.android:lottie:3.2.0'
