--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.desaa">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,27 +13,30 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DesaA">
         <activity
-            android:name=".ui.backwood.BackwoodActivity"
+            android:name=".SplashActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.headman.HomeHeadmanActivity"
+            android:exported="false"
+            android:label="@string/title_activity_home_headman"
+            android:theme="@style/Theme.DesaA.NoActionBar" />
+        <activity
+            android:name=".ui.user.HomeUserActivity"
+            android:exported="false"
+            android:label="@string/title_activity_home"
+            android:theme="@style/Theme.DesaA.NoActionBar" />
+        <activity
+            android:name=".MainActivity"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".SplashActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.user.HomeUserActivity"
+            android:name=".ui.backwood.BackwoodActivity"
             android:exported="false"
-            android:label="@string/title_activity_home"
-            android:theme="@style/Theme.DesaA.NoActionBar"
-             />
+            android:theme="@style/Theme.DesaA.NoActionBar" />
         <activity
-            android:name=".ui.headman.HomeHeadmanActivity"
-            android:theme="@style/Theme.DesaA.NoActionBar"
-            android:label="@string/title_activity_home_headman"
+            android:name=".TestLayoutActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
