--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.github.bumptech.glide:glide:4.13.1'
+
     def lifecycle_version = "2.4.1"
 
     //Lottie
@@ -62,6 +62,9 @@ dependencies {
 
     //Coil
     implementation("io.coil-kt:coil:2.0.0-rc03")
+
+    //ImagePicker
+    implementation 'com.github.dhaval2404:imagepicker:2.0'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
