--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,8 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
+        jcenter() // Warning
+        maven { url "https://jitpack.io" }// : this repository is going to shut down soon
     }
 }
 rootProject.name = "DesaApp"
