--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,15 @@ dependencies {
     //ImagePicker
     implementation 'com.github.dhaval2404:imagepicker:2.0'
 
+    //Sweet alert dialog
+    implementation 'com.github.f0ris.sweetalert:library:1.6.2'
+
+    //Moshi
+    implementation 'com.squareup.retrofit2:converter-moshi:2.6.0'
+
+    // Saved state module for ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
