--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,38 +5,39 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo_maros"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo_maros"
         android:supportsRtl="true"
         android:theme="@style/Theme.DesaA">
+
         <activity
             android:name=".TestLayoutActivity"
             android:exported="false" />
         <activity
             android:name=".ui.headman.HomeHeadmanActivity"
             android:exported="false"
-            android:screenOrientation="portrait"
             android:label="@string/title_activity_home_headman"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.DesaA.NoActionBar" />
         <activity
             android:name=".ui.user.HomeUserActivity"
             android:exported="false"
-            android:screenOrientation="portrait"
             android:label="@string/title_activity_home"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.DesaA.NoActionBar" />
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
-            android:name=".LoginActivity"
-            android:screenOrientation="portrait"
-            android:exported="false" />
+            android:name=".ui.login.LoginActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.backwood.BackwoodActivity"
             android:exported="false"
@@ -44,8 +45,8 @@
             android:theme="@style/Theme.DesaA.NoActionBar" />
         <activity
             android:name=".SplashActivity"
-            android:screenOrientation="portrait"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
